Copy mars.bmp for benchmark_sphere test

--- a/samples/gltests/benchmark_sphere/CMakeLists.txt
+++ b/samples/gltests/benchmark_sphere/CMakeLists.txt
@@ -16,5 +16,13 @@ target_link_libraries(${PROJECT_NAME}
     ${X11_X11_LIB}
     )
 
+# copy our stone.tga file to pyramid_ch8_stone.tga, etc.
+set(outfile "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/mars.bmp")
+add_custom_command(
+    TARGET ${PROJECT_NAME} POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CMAKE_CURRENT_SOURCE_DIR}/mars.bmp" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/mars.bmp"
+    MAIN_DEPENDENCY mars.bmp)
+
+
 build_options_finalize()
 
