Clang Static Analyzer  - Add --scan-build option to mkvogl.  - This builds with Clang's scan-build which enables the Clang Static Analyzer.  - Modify configure_chroot.sh to set up the appropriate scan-build,    clang, and scan-view binaries.
More information on Clang Static Analyzer can be found here:

http://clang-analyzer.llvm.org/index.html

Note that when it says:

  Run 'scan-view /tmp/scan-build-2014-04-17-225541-22336-1' to examine bug
reports.

On Linux you can actually do

  xdg-open /tmp/scan-build-2014-04-17-225541-22336-1/index.html

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
+*~
 vogl/*
-
-bin/x86_64/mkvogl
-bin/x86_64/steamlauncher
-bin/i386/mkvogl
-bin/i386/steamlauncher
 vogl_build/*
 vogl_extbuild/*
 
-*~
+bin/x86_64/mkvogl
+bin/x86_64/steamlauncher
+bin/x86_64/clang-format
+bin/i386/mkvogl
+bin/i386/steamlauncher
+bin/i386/clang-format
+
+tests/x86_64/run_tests
+
