--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,13 @@ bin/i386/clang-format
 
 tests/x86_64/run_tests
 
+tests/traces/MetroLL.trace
+tests/traces/darwinia_trace.bin
+tests/traces/doom3.trace
+tests/traces/dota_linux.trace
+tests/traces/glxspheres32.trace
+tests/traces/heaven_x86.trace
+tests/traces/p1_full.trace
+tests/traces/quake2.trace
+tests/traces/quake3.x86.trace
+tests/traces/tf2.trace
