--- a/src/extlib/pxfmt/CMakeLists.txt
+++ b/src/extlib/pxfmt/CMakeLists.txt
@@ -15,9 +15,11 @@ set(SRC_LIST
     pxfmt.h
     pxfmt_fxt1.cpp
     pxfmt_s3tc.cpp
+    pxfmt_etc.cpp
     pxfmt_internal.h
     pxfmt_dlopen.h
     pxfmt_case_statements.inl
+    texcompress_etc_tmp.h
 )
 
 if (NOT MSVC)
