More ETC2 work + get compiling on Linux.  Works for DXT+ still.
I tried it on a couple non-compressed KTX files, plus some DXT files.  It works!

--- a/src/extlib/pxfmt/CMakeLists.txt
+++ b/src/extlib/pxfmt/CMakeLists.txt
@@ -17,6 +17,7 @@ set(SRC_LIST
     pxfmt_s3tc.cpp
     pxfmt_etc.cpp
     pxfmt_internal.h
+    pxfmt_internal.cpp
     pxfmt_dlopen.h
     pxfmt_case_statements.inl
     texcompress_etc_tmp.h
